# games

./: .gitignore  BLOG.md  COLAB_INSTRUCTIONS.md  Dockerfile  FleetAI_Training_Colab.ipynb  README.md  TRAINING_RESULTS.md  WRITEUP.md  __init__.py  amazon_dataset_test_results.json  app.py  client.py  demo.py  demo_ui.py  evaluate.py  generate_plots.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  test_amazon_dataset.py  test_tabs.py  train.py  utils.py
environment/: __init__.py  env.py  error_injector.py  graders.py  models.py  tickets.py
plots/: .gitkeep  README.md
server/: __init__.py  app.py  fleet_ai_environment.py
tests/: test_env.py  test_error_injector.py  test_graders.py
